fix instructions area - readability

--- a/src/style.css
+++ b/src/style.css
@@ -63,6 +63,7 @@
 }
 
 #instructionsArea{
+    background-color: white;
     display: none;
 }
 
